src/test/ui/unboxed-closures/unboxed-closures-mutate-upvar.nll.stderr
error[E0594]: cannot assign to `n`, as it is not declared as mutable
  --> $DIR/unboxed-closures-mutate-upvar.rs:15:9
   |
LL |     let n = 0;
   |         - help: consider changing this to be mutable: `mut n`
LL |     let mut f = to_fn_mut(|| {
LL |         n += 1;
   |         ^^^^^^ cannot assign

error[E0594]: cannot assign to `n`, as it is not declared as mutable
  --> $DIR/unboxed-closures-mutate-upvar.rs:32:9
   |
LL |     let n = 0;
   |         - help: consider changing this to be mutable: `mut n`
...
LL |         n += 1;
   |         ^^^^^^ cannot assign

error[E0594]: cannot assign to `n`, as it is not declared as mutable
  --> $DIR/unboxed-closures-mutate-upvar.rs:46:9
   |
LL |     let n = 0;
   |         - help: consider changing this to be mutable: `mut n`
LL |     let mut f = to_fn(move || {
LL |         n += 1;
   |         ^^^^^^ cannot assign

error[E0594]: cannot assign to `n`, as it is a captured variable in a `Fn` closure
  --> $DIR/unboxed-closures-mutate-upvar.rs:53:9
   |
LL |         n += 1;
   |         ^^^^^^ cannot assign
   |
help: consider changing this to accept closures that implement `FnMut`
  --> $DIR/unboxed-closures-mutate-upvar.rs:52:23
   |
LL |       let mut f = to_fn(move || {
   |  _______________________^
LL | |         n += 1;
LL | |     });
   | |_____^

error: aborting due to 4 previous errors

